--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"type": "module",
 	"devDependencies": {
 		"@types/bun": "^1.1.14",
+		"mermaid": "^11.12.1",
 		"vitepress": "^1.6.4",
+		"vitepress-plugin-mermaid": "^2.0.17",
 		"vue": "^3.5.13"
 	},
 	"scripts": {
